Change the image urls to github urls

--- a/src/lydiaviolet-poll/widget.html
+++ b/src/lydiaviolet-poll/widget.html
@@ -1,6 +1,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <div class="vote-main-container">
   <center><span id="vote-countdown"></span></center>
-  <img src="https://i.ibb.co/qj6kNN5/progressbar.png" id="vote-progress-image">
-  <img src="https://i.ibb.co/L0T5qBR/pointer.png" id="vote-pointer">
+  <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/progressbar.png"
+    id="vote-progress-image">
+  <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/pointer.png"
+    id="vote-pointer">
 </div>
