--- a/src/lydiaviolet-poll/widget.html
+++ b/src/lydiaviolet-poll/widget.html
@@ -1,7 +1,22 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <div class="vote-main-container">
-  <center><span id="vote-countdown"></span></center>
-  <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/progressbar.png"
+  <div class="vote-top-row">
+    <img
+      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/pepe-1.webp"
+      id="vote-pepe-1">
+    <img
+      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/hype.webp"
+      class="vote-hype">
+    <span id="vote-countdown"></span>
+    <img
+      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/hype.webp"
+      class="vote-hype">
+    <img
+      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/pepe-2.webp"
+      id="vote-pepe-2">
+  </div>
+  <img
+    src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/progressbar.png"
     id="vote-progress-image">
   <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/pointer.png"
     id="vote-pointer">
