--- a/src/lydiaviolet-poll/widget.html
+++ b/src/lydiaviolet-poll/widget.html
@@ -18,6 +18,7 @@
   <img
     src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/progressbar.png"
     id="vote-progress-image">
-  <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/pointer.png"
+  <img
+    src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/pika-dance.gif"
     id="vote-pointer">
 </div>
