--- a/src/lydiaviolet-poll/widget.html
+++ b/src/lydiaviolet-poll/widget.html
@@ -1,24 +1,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <div class="vote-main-container">
   <div class="vote-top-row">
-    <img
-      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/pepe-1.webp"
+    <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/pepe-1.webp"
       id="vote-pepe-1">
-    <img
-      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/hype.webp"
+    <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/hype.webp"
       class="vote-hype">
     <span id="vote-countdown"></span>
-    <img
-      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/hype.webp"
+    <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/hype.webp"
       class="vote-hype">
-    <img
-      src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/pepe-2.webp"
+    <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/pepe-2.webp"
       id="vote-pepe-2">
   </div>
-  <img
-    src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/progressbar.png"
+  <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/progressbar.png"
     id="vote-progress-image">
-  <img
-    src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/feature/libby-poll-animated/src/lydiaviolet-poll/pika-dance.gif"
+  <img src="https://raw.githubusercontent.com/PoOwAa/streamelements-widgets/main/src/lydiaviolet-poll/pika-dance.gif"
     id="vote-pointer">
 </div>
